fixes to section-leaders: Used flex-wrap

--- a/styles/about.css
+++ b/styles/about.css
@@ -48,7 +48,7 @@
 
 .section-led .leaders {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
 }
@@ -56,7 +56,7 @@
 .section-led .leader {
   width: 270px;
   height: 300px;
-  margin: 1em 0;
+  margin: 1em;
   position: relative;
 }
 
@@ -106,13 +106,8 @@
     max-width: 700px;
   }
 
-  .section-led .leaders {
-    flex-direction: row;
-  }
-
   .section-led .leader {
     width: 350px;
     height: 380px;
-    margin: 0 1em;
   }
 }
